profile servies outline darker, avatar stretch fixed, rating plant leaves

--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -5,16 +5,7 @@
   padding: 8px;
 }
 
-.logo-centered {
-  width: 100%;
-  display: flex;
-  justify-content: center;
 
-  img {
-    width: 60px;
-    
-  }
-}
 
 .profile-booking-avatar {
   width: 30%;
